@@ -1,0 +1,7 @@
+package Test::Const::Exporter::Strictures;
+
+use Const::Exporter;
+
+$failure;
+
+1;
